[change] - fix release.yml

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle
 
       - name: Build with Gradle
-        run: ./gradlew build assembleDist
+        run: ./gradlew build
 
       - name: Get current version
         id: get-version
@@ -52,6 +52,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: build/distributions/groovy-jmeter-${{ steps.get-version.outputs.release_version }}.jar
+          asset_path: build/libs/groovy-jmeter-${{ steps.get-version.outputs.release_version }}.jar
           asset_name: groovy-jmeter-${{ steps.get-version.outputs.release_version }}.jar
           asset_content_type: application/java-archive
