--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 /*
- * Copyright 2019 Szymon Micyk
+ * Copyright 2021 Szymon Micyk
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,9 +18,13 @@ plugins {
     id 'java-library'
     id 'idea'
     id 'eclipse'
-    id 'ivy-publish'
     id 'codenarc'
     id 'pl.allegro.tech.build.axion-release' version '1.12.1'
+
+    id 'maven-publish'
+    id 'ivy-publish'
+
+    id 'signing'
 }
 
 repositories {
@@ -39,6 +43,7 @@ scmVersion {
     }
 }
 
+project.group = 'net.simonix.scripts'
 project.version = scmVersion.version
 
 java {
@@ -75,13 +80,13 @@ dependencies {
     }
 
     // testing and mocking
-    testCompile('junit:junit:4.12')
-    testCompile('org.spockframework:spock-core:1.3-groovy-2.5')
+    testImplementation('junit:junit:4.12')
+    testImplementation('org.spockframework:spock-core:1.3-groovy-2.5')
 
-    testCompile('org.mock-server:mockserver-netty:5.6.0')
-    testCompile('org.mock-server:mockserver-client-java:5.6.0')
+    testImplementation('org.mock-server:mockserver-netty:5.6.0')
+    testImplementation('org.mock-server:mockserver-client-java:5.6.0')
 
-    testCompile('org.xmlunit:xmlunit-core:2.6.3')
+    testImplementation('org.xmlunit:xmlunit-core:2.6.3')
 }
 
 codenarc {
@@ -114,16 +119,36 @@ groovydoc {
     footer 'Szymon Micyk'
 }
 
+task sourcesJar(type: Jar) {
+    from sourceSets.main.allGroovy
+    archiveClassifier = 'sources'
+}
+
+task javadocJar(type: Jar) {
+    from groovydoc
+    archiveClassifier = 'javadoc'
+}
+
 publishing {
     repositories {
         ivy {
             artifactPattern "${System.properties['user.home']}/.groovy/grapes/[organization]/[module]/jars/[artifact]-[revision](.[ext])"
             ivyPattern "${System.properties['user.home']}/.groovy/grapes/[organization]/[module]/ivy-[revision].xml"
         }
+        maven {
+            credentials {
+                username = "$mavenRepoUser"
+                password = "$mavenRepoPass"
+            }
+
+            def releasesRepoUrl = 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
+            def snapshotsRepoUrl = 'https://oss.sonatype.org/content/repositories/snapshots/'
+            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+        }
     }
     publications {
         ivy(IvyPublication) {
-            organisation = 'net.simonix.scripts'
+            organisation = project.group
             module = 'groovy-jmeter'
             revision = project.version
 
@@ -131,5 +156,42 @@ publishing {
 
             from components.java
         }
+        maven(MavenPublication) {
+            groupId = project.group
+            artifactId = 'groovy-jmeter'
+            version = project.version
+            from components.java
+            artifact sourcesJar
+            artifact javadocJar
+
+            pom {
+                name = 'groovy-jmeter'
+                description = 'A Groovy-based DSL for building and running JMeter test plans from command line and more'
+                url = 'https://github.com/smicyk/groovy-jmeter'
+
+                licenses {
+                    license {
+                        name = 'The Apache License, Version 2.0'
+                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+                developers {
+                    developer {
+                        id = 'smicyk'
+                        name = 'Szymon Micyk'
+                        email = 'szymon.micyk@gmail.com'
+                    }
+                }
+                scm {
+                    connection = 'scm:git:git://github.com/smicyk/groovy-jmeter'
+                    developerConnection = 'scm:git:ssh://github.com/smicyk/groovy-jmeter'
+                    url = 'https://github.com/smicyk/groovy-jmeter'
+                }
+            }
+        }
     }
+}
+
+signing {
+    sign publishing.publications.maven
 }
