[feature] - add jdbc sampler
- support for jdbc config and jdbc sampler
- add possibility to have nested builder with same keywords depending on context
- add name to testelementnode
- update keyword validation to be more dynamic
- add delegate_only strategy for closure delegation for better exception location

--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,11 @@ dependencies {
         exclude group: 'xml-apis', module: 'xml-apis'
     }
 
+    implementation('org.apache.jmeter:ApacheJMeter_jdbc:5.2.1') {
+        exclude group: 'xerces', module: 'xercesImpl'
+        exclude group: 'xml-apis', module: 'xml-apis'
+    }
+
     implementation('org.apache.httpcomponents:httpclient:4.5.10')
 
     // testing and mocking
@@ -94,6 +99,7 @@ dependencies {
     testImplementation('org.mock-server:mockserver-client-java:5.6.0')
 
     testImplementation('org.xmlunit:xmlunit-core:2.6.3')
+    testImplementation('com.h2database:h2:1.4.200')
 }
 
 codenarc {
