[feature] - update different components of the project
- update JMeter engine to latest 5.4.1
- update groovy version to 3.0.7
- update spock to 2.0-groovy-3.0
- update junit to 5
- update codenarc to 2.1.0
- update mockserver to 5.11.2
- update xmlunit to 2.8.2
- update httpcomponents to 4.5.12

--- a/src/main/resources/org/apache/jmeter/jmeter.properties
+++ b/src/main/resources/org/apache/jmeter/jmeter.properties
@@ -1,21 +1,23 @@
+#
+# Licensed to the Apache Software Foundation (ASF) under one or more
+# contributor license agreements.  See the NOTICE file distributed with
+# this work for additional information regarding copyright ownership.
+# The ASF licenses this file to you under the Apache License, Version 2.0
+# (the "License"); you may not use this file except in compliance with
+# the License.  You may obtain a copy of the License at
+#
+# http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+
 ################################################################################
 # Apache JMeter Property file
 ################################################################################
-
-##   Licensed to the Apache Software Foundation (ASF) under one or more
-##   contributor license agreements.  See the NOTICE file distributed with
-##   this work for additional information regarding copyright ownership.
-##   The ASF licenses this file to You under the Apache License, Version 2.0
-##   (the "License"); you may not use this file except in compliance with
-##   the License.  You may obtain a copy of the License at
-##
-##       http://www.apache.org/licenses/LICENSE-2.0
-##
-##   Unless required by applicable law or agreed to in writing, software
-##   distributed under the License is distributed on an "AS IS" BASIS,
-##   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-##   See the License for the specific language governing permissions and
-##   limitations under the License.
 
 ################################################################################
 #
@@ -92,13 +94,13 @@
 # Deprecated since 5.0
 #https.use.cached.ssl.context=true
 
-# 
+#
 # Reset HTTP State when starting a new Thread Group iteration which means:
 # true means next iteration is associated to a new user
 # false means next iteration is associated to same user
-# true involves: 
+# true involves:
 # - Closing opened connection
-# - resetting SSL State 
+# - resetting SSL State
 #httpclient.reset_state_on_thread_group_iteration=true
 
 # Start and end index to be used with keystores with many entries
@@ -130,13 +132,21 @@
 # Custom settings for Mac using System LAF if you don't want to use Darcula
 #jmeter.laf.mac=System
 
-# Failing that, the JMeter default laf can be defined:
+# Failing that, the JMeter default LAF can be defined:
 #jmeter.laf=System
 
 # If none of the above jmeter.laf properties are defined, JMeter uses the CrossPlatform LAF.
 # This is because the CrossPlatform LAF generally looks better than the System LAF.
 # See https://bz.apache.org/bugzilla/show_bug.cgi?id=52026 for details
-# N.B. the laf can be defined in user.properties.
+# N.B. the LAF can be defined in user.properties.
+
+# Enable custom window chrome for Darklaf Look and Feels.
+# defaults to false
+# darklaf.decorations=false
+
+# Enables the unified menubar for Darklaf Look and Feels.
+# defaults to true
+# darklaf.unifiedMenuBar=true
 
 # LoggerPanel display
 # default to false
@@ -156,10 +166,10 @@
 #jmeter.gui.refresh_period=500
 
 # HiDPI mode (default: false)
-# Activate a 'pseudo'-hidpi mode. Allows to increase size of some UI elements
+# Activate a 'pseudo'-HiDPI mode. Allows to increase size of some UI elements
 # which are not correctly managed by JVM with high resolution screens in Linux or Windows
 #jmeter.hidpi.mode=false
-# To enable pseudo-hidpi mode change to true
+# To enable pseudo-HiDPI mode change to true
 #jmeter.hidpi.mode=true
 # HiDPI scale factor
 #jmeter.hidpi.scale.factor=1.0
@@ -227,7 +237,7 @@ gui.quick_9=ViewResultsFullVisualizer
 #Enable auto backups of the .jmx file when a test plan is saved.
 #When enabled, before the .jmx is saved, it will be backed up to the directory pointed
 #by the jmeter.gui.action.save.backup_directory property (see below). Backup file names are built
-#after the jmx file being saved. For example, saving test-plan.jmx will create a test-plan-000012.jmx
+#after the .jmx file being saved. For example, saving test-plan.jmx will create a test-plan-000012.jmx
 #in the backup directory provided that the last created backup file is test-plan-000011.jmx.
 #Default value is true indicating that auto backups are enabled
 #jmeter.gui.action.save.backup_on_save=true
@@ -275,8 +285,9 @@ remote_hosts=127.0.0.1
 # On the client:
 # - set remote_hosts=server:1234
 
-# Parameter that controls the RMI port used by RemoteSampleListenerImpl (The Controller)
-# Default value is 0 which means port is randomly assigned
+# Parameter that controls the base for RMI ports used by RemoteSampleListenerImpl and RemoteThreadsListenerImpl (The Controller)
+# Default value is 0 which means ports are randomly assigned
+# If you specify a base port, JMeter will (at the moment) use the ports that start one after the given base.
 # You may need to open Firewall port on the Controller machine
 #client.rmi.localport=0
 
@@ -299,7 +310,7 @@ remote_hosts=127.0.0.1
 # the following property before starting the server:
 #server.rmi.localport=4000
 
-# The jmeter server creates by default the RMI registry as part of the server process.
+# The JMeter server creates by default the RMI registry as part of the server process.
 # To stop the server creating the RMI registry:
 #server.rmi.create=false
 
@@ -315,7 +326,7 @@ remote_hosts=127.0.0.1
 # Keystore file that contains private key
 #server.rmi.ssl.keystore.file=rmi_keystore.jks
 #
-# Password of Keystore
+# Password of keystore
 #server.rmi.ssl.keystore.password=changeit
 #
 # Key alias
@@ -327,7 +338,7 @@ remote_hosts=127.0.0.1
 # Keystore file that contains certificate
 #server.rmi.ssl.truststore.file=rmi_keystore.jks
 #
-# Password of Trust store
+# Password of truststore
 #server.rmi.ssl.truststore.password=changeit
 #
 # Set this if you don't want to use SSL for RMI
@@ -388,7 +399,7 @@ remote_hosts=127.0.0.1
 # Name of application module used in jaas.conf
 #kerberos_jaas_application=JMeter
 
-# Should ports be stripped from urls before constructing SPNs
+# Should ports be stripped from URLs before constructing SPNs
 # for SPNEGO authentication
 #kerberos.spnego.strip_port=true
 
@@ -404,7 +415,7 @@ remote_hosts=127.0.0.1
 # Uncomment this line if you put anything in hc.parameters file
 #hc.parameters.file=hc.parameters
 
-# If true, default HC4 User-Agent will not be added 
+# If true, default HC4 User-Agent will not be added
 #httpclient4.default_user_agent_disabled=false
 
 # Preemptively send Authorization Header when BASIC auth is used
@@ -427,15 +438,11 @@ remote_hosts=127.0.0.1
 
 # Check connections if the elapsed time (Milliseconds) since the last
 # use of the connection exceed this value
-#httpclient4.validate_after_inactivity=1700
+#httpclient4.validate_after_inactivity=4900
 
 # TTL (in Milliseconds) represents an absolute value.
 # No matter what, the connection will not be re-used beyond its TTL.
-#httpclient4.time_to_live=2000
-
-# Max size in bytes of PUT body to retain in result sampler.
-# Bigger results will be clipped.
-#httpclient4.max_body_retain_size=32768
+#httpclient4.time_to_live=60000
 
 # Ignore EOFException that some edgy application may emit to signal end of GZIP stream
 # Defaults to false
@@ -549,7 +556,7 @@ remote_hosts=127.0.0.1
 # By default JMeter sends the variable to all servers
 # to ensure that the correct data is available at the client.
 
-# Optional xml processing instruction for line 2 of the file:
+# Optional XML processing instruction for line 2 of the file:
 # Example:
 #jmeter.save.saveservice.xml_pi=<?xml-stylesheet type="text/xsl" href="../extras/jmeter-results-detail-report.xsl"?>
 # Default value:
@@ -602,8 +609,11 @@ upgrade_properties=/bin/upgrade.properties
 # it assumes that the user has clicked a new URL
 #proxy.pause=5000
 
-# Add numeric prefix to Sampler names (default true)
+# Add numeric suffix to Sampler names (default true)
 #proxy.number.requests=true
+
+# Default format string for new samplers when 'Use format string' is selected as 'naming scheme'
+#proxy.sampler_format=#{counter,number,000} - #{path} (#{name})
 
 # List of URL patterns that will be added to URL Patterns to exclude
 # Separate multiple lines with ;
@@ -618,7 +628,7 @@ upgrade_properties=/bin/upgrade.properties
 # HttpClient4.x
 #jmeter.httpsampler=HttpClient4
 
-# By default JMeter tries to be more lenient with RFC2616 redirects and allows
+# By default JMeter tries to be more lenient with RFC 2616 redirects and allows
 # relative paths.
 # If you want to test strict conformance, set this value to true
 # When the property is true, JMeter follows http://tools.ietf.org/html/rfc3986#section-5.2
@@ -694,7 +704,7 @@ cssParser.types=text/css
 # It can be disabled by setting its value to 0
 #css.parser.cache.size=400
 
-# Let the CSS Parser ignore all css errors
+# Let the CSS Parser ignore all CSS errors
 #css.parser.ignore_all_css_errors=true
 
 #---------------------------------------------------------------------------
@@ -793,7 +803,7 @@ wmlParser.types=text/vnd.wap.wml
 # Database validation query
 # based in https://stackoverflow.com/questions/10684244/dbcp-validationquery-for-different-databases list
 jdbc.config.check.query=select 1 from INFORMATION_SCHEMA.SYSTEM_USERS|select 1 from dual|select 1 from sysibm.sysdummy1|select 1|select 1 from rdb$database
-jdbc.config.jdbc.driver.class=com.mysql.jdbc.Driver|org.postgresql.Driver|oracle.jdbc.OracleDriver|com.ingres.jdbc.IngresDriver|com.microsoft.sqlserver.jdbc.SQLServerDriver|com.microsoft.jdbc.sqlserver.SQLServerDriver|org.apache.derby.jdbc.ClientDriver|org.hsqldb.jdbc.JDBCDriver|com.ibm.db2.jcc.DB2Driver|org.apache.derby.jdbc.ClientDriver|org.h2.Driver|org.firebirdsql.jdbc.FBDriver|org.mariadb.jdbc.Driver|org.sqlite.JDBC|net.sourceforge.jtds.jdbc.Driver
+jdbc.config.jdbc.driver.class=com.mysql.jdbc.Driver|org.postgresql.Driver|oracle.jdbc.OracleDriver|com.ingres.jdbc.IngresDriver|com.microsoft.sqlserver.jdbc.SQLServerDriver|com.microsoft.jdbc.sqlserver.SQLServerDriver|org.apache.derby.jdbc.ClientDriver|org.hsqldb.jdbc.JDBCDriver|com.ibm.db2.jcc.DB2Driver|org.apache.derby.jdbc.ClientDriver|org.h2.Driver|org.firebirdsql.jdbc.FBDriver|org.mariadb.jdbc.Driver|org.sqlite.JDBC|net.sourceforge.jtds.jdbc.Driver|com.exasol.jdbc.EXADriver
 
 #---------------------------------------------------------------------------
 # OS Process Sampler configuration
@@ -809,7 +819,7 @@ jdbc.config.jdbc.driver.class=com.mysql.jdbc.Driver|org.postgresql.Driver|oracle
 #tcp.handler=TCPClientImpl
 #
 # eolByte = byte value for end of line
-# set this to a value outside the range -128 to +127 to skip eol checking
+# set this to a value outside the range -128 to +127 to skip EOL checking
 #tcp.eolByte=1000
 #
 # TCP Charset, used by org.apache.jmeter.protocol.tcp.sampler.TCPClientImpl
@@ -976,7 +986,7 @@ beanshell.server.file=../extras/startup.bsh
 #csvread.delimiter=!
 #csvread.delimiter=~
 # The following line has a tab after the =
-#csvread.delimiter=	
+#csvread.delimiter=
 
 #---------------------------------------------------------------------------
 # __time() function configuration
@@ -1022,7 +1032,7 @@ csvdataset.file.encoding_list=UTF-8|UTF-16|ISO-8859-15|US-ASCII
 # Miscellaneous configuration
 #---------------------------------------------------------------------------
 
-# Size of cache used by CSS Selector Extractor (for JODD implementation only) 
+# Size of cache used by CSS Selector Extractor (for JODD implementation only)
 # to store parsed CSS Selector expressions.
 #cssselector.parser.cache.size=400
 
@@ -1073,7 +1083,7 @@ csvdataset.file.encoding_list=UTF-8|UTF-16|ISO-8859-15|US-ASCII
 #keep alive time for the parallel download threads (in seconds)
 #httpsampler.parallel_download_thread_keepalive_inseconds=60
 
-# Don't keep the embedded resources response data : just keep the size and the md5
+# Don't keep the embedded resources response data : just keep the size and the MD5
 # default to false
 #httpsampler.embedded_resources_use_md5=false
 
@@ -1106,7 +1116,7 @@ csvdataset.file.encoding_list=UTF-8|UTF-16|ISO-8859-15|US-ASCII
 # Netscape HTTP Cookie file
 cookies=cookies
 
-# Ability to switch to Nashorn as default Javascript Engine used by IfController and __javaScript function
+# Ability to switch to Nashorn as default JavaScript Engine used by IfController and __javaScript function
 # JMeter works as following:
 # - JDK >= 8 and javascript.use_rhino=false or not set : Nashorn
 # - JDK >= 8 and javascript.use_rhino=true: Rhino
@@ -1162,21 +1172,21 @@ cookies=cookies
 # Set this to false to disable the use of JSyntaxTextArea for the Console Logger panel
 #loggerpanel.usejsyntaxtext=true
 
-# Maximum size of HTML page that can be displayed; default=10 mbytes
+# Maximum size of HTML page that can be displayed; default=10 MB
 # Set to 0 to disable the size check and display the whole response
 #view.results.tree.max_size=10485760
 
 # Order of Renderers in View Results Tree
-# Note full class names should be used for non jmeter core renderers
-# For JMeter core renderers, class names start with . and are automatically
+# Note full class names should be used for non JMeter core renderers
+# For JMeter core renderers, class names start with '.' and are automatically
 # prefixed with org.apache.jmeter.visualizers
-view.results.tree.renderers_order=.RenderAsText,.RenderAsRegexp,.RenderAsBoundaryExtractor,.RenderAsCssJQuery,.RenderAsXPath,org.apache.jmeter.extractor.json.render.RenderAsJsonRenderer,.RenderAsHTML,.RenderAsHTMLFormatted,.RenderAsHTMLWithEmbedded,.RenderAsDocument,.RenderAsJSON,.RenderAsXML
+view.results.tree.renderers_order=.RenderAsText,.RenderAsRegexp,.RenderAsBoundaryExtractor,.RenderAsCssJQuery,org.apache.jmeter.extractor.json.render.RenderAsJsonRenderer,.RenderAsXPath2,org.apache.jmeter.extractor.json.render.RenderAsJmesPathRenderer,.RenderAsXPath,.RenderAsHTML,.RenderAsHTMLFormatted,.RenderAsHTMLWithEmbedded,.RenderAsDocument,.RenderAsJSON,.RenderAsXML
 
 # Maximum number of results in the results tree
 # Set to 0 to store all results (might consume a lot of memory)
 #view.results.tree.max_results=500
 
-# Maximum size of Document that can be parsed by Tika engine; defaut=10 * 1024 * 1024 (10MB)
+# Maximum size of Document that can be parsed by Tika engine; default=10 * 1024 * 1024 (10 MB)
 # Set to 0 to disable the size check
 #document.max_size=0
 
@@ -1188,7 +1198,7 @@ view.results.tree.renderers_order=.RenderAsText,.RenderAsRegexp,.RenderAsBoundar
 # Set the following value to true in order to skip the delete confirmation dialogue
 #confirm.delete.skip=false
 
-# Used by JSR223 elements
+# Used by JSR-223 elements
 # Size of compiled scripts cache
 #jsr223.compiled_scripts_cache_size=100
 
@@ -1279,7 +1289,7 @@ system.properties=system.properties
 # Number of iterations to use to validate a Thread Group
 #testplan_validation.number_iterations=1
 
-# Force throuput controllers that work in percentage mode to be a 100%
+# Force throughput controllers that work in percentage mode to be a 100%
 # Disabled by default
 #testplan_validation.tpc_force_100_pct=false
 
@@ -1316,7 +1326,7 @@ jmeter.reportgenerator.apdex_satisfied_threshold=500
 jmeter.reportgenerator.apdex_tolerated_threshold=1500
 
 # Timeout in milliseconds for Report generation when using Tools > Generate HTML report
-#generate_report_ui.generation_timeout=120000
+#generate_report_ui.generation_timeout=300000
 #---------------------------------------------------------------------------
 # Naming Policy configuration
 #---------------------------------------------------------------------------
