--- a/src/main/resources/org/apache/jmeter/saveservice.properties
+++ b/src/main/resources/org/apache/jmeter/saveservice.properties
@@ -1,21 +1,23 @@
+#
+# Licensed to the Apache Software Foundation (ASF) under one or more
+# contributor license agreements.  See the NOTICE file distributed with
+# this work for additional information regarding copyright ownership.
+# The ASF licenses this file to you under the Apache License, Version 2.0
+# (the "License"); you may not use this file except in compliance with
+# the License.  You may obtain a copy of the License at
+#
+# http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+
 #---------------------------------------------------------
 #         SAVESERVICE PROPERTIES - JMETER INTERNAL USE ONLY
 #---------------------------------------------------------
-
-##   Licensed to the Apache Software Foundation (ASF) under one or more
-##   contributor license agreements.  See the NOTICE file distributed with
-##   this work for additional information regarding copyright ownership.
-##   The ASF licenses this file to You under the Apache License, Version 2.0
-##   (the "License"); you may not use this file except in compliance with
-##   the License.  You may obtain a copy of the License at
-## 
-##       http://www.apache.org/licenses/LICENSE-2.0
-## 
-##   Unless required by applicable law or agreed to in writing, software
-##   distributed under the License is distributed on an "AS IS" BASIS,
-##   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-##   See the License for the specific language governing permissions and
-##   limitations under the License.
 
 # This file is used to define how XStream (de-)serializes classnames
 # in JMX test plan files.
@@ -148,6 +150,7 @@ GaussianRandomTimerGui=org.apache.jmeter.timers.gui.GaussianRandomTimerGui
 GenericController=org.apache.jmeter.control.GenericController
 GraphAccumVisualizer=org.apache.jmeter.visualizers.GraphAccumVisualizer
 GraphVisualizer=org.apache.jmeter.visualizers.GraphVisualizer
+GraphQLHTTPSamplerGui=org.apache.jmeter.protocol.http.control.gui.GraphQLHTTPSamplerGui
 Header=org.apache.jmeter.protocol.http.control.Header
 HeaderManager=org.apache.jmeter.protocol.http.control.HeaderManager
 HeaderPanel=org.apache.jmeter.protocol.http.gui.HeaderPanel
@@ -190,6 +193,10 @@ JDBCDataSource=org.apache.jmeter.protocol.jdbc.config.DataSourceElement
 JDBCPostProcessor=org.apache.jmeter.protocol.jdbc.processor.JDBCPostProcessor
 JDBCPreProcessor=org.apache.jmeter.protocol.jdbc.processor.JDBCPreProcessor
 JDBCSampler=org.apache.jmeter.protocol.jdbc.sampler.JDBCSampler
+JMESPathAssertion=org.apache.jmeter.assertions.jmespath.JMESPathAssertion
+JMESPathAssertionGui=org.apache.jmeter.assertions.jmespath.gui.JMESPathAssertionGui
+JMESPathExtractor=org.apache.jmeter.extractor.json.jmespath.JMESPathExtractor
+JMESPathExtractorGui=org.apache.jmeter.extractor.json.jmespath.gui.JMESPathExtractorGui
 # Renamed to JMSSamplerGui; keep original entry for backwards compatibility
 JMSConfigGui=org.apache.jmeter.protocol.jms.control.gui.JMSConfigGui
 JMSProperties=org.apache.jmeter.protocol.jms.sampler.JMSProperties
@@ -243,6 +250,8 @@ MongoSourceElement=org.apache.jmeter.protocol.mongodb.config.MongoSourceElement
 MonitorHealthVisualizer=org.apache.jmeter.visualizers.MonitorHealthVisualizer
 
 NamePanel=org.apache.jmeter.gui.NamePanel
+BoltSampler=org.apache.jmeter.protocol.bolt.sampler.BoltSampler
+BoltConnectionElement=org.apache.jmeter.protocol.bolt.config.BoltConnectionElement
 ObsoleteGui=org.apache.jmeter.config.gui.ObsoleteGui
 OnceOnlyController=org.apache.jmeter.control.OnceOnlyController
 OnceOnlyControllerGui=org.apache.jmeter.control.gui.OnceOnlyControllerGui
@@ -363,6 +372,8 @@ XMLSchemaAssertion=org.apache.jmeter.assertions.XMLSchemaAssertion
 XMLSchemaAssertionGUI=org.apache.jmeter.assertions.gui.XMLSchemaAssertionGUI
 XPathAssertion=org.apache.jmeter.assertions.XPathAssertion
 XPathAssertionGui=org.apache.jmeter.assertions.gui.XPathAssertionGui
+XPath2Assertion=org.apache.jmeter.assertions.XPath2Assertion
+XPath2AssertionGui=org.apache.jmeter.assertions.gui.XPath2AssertionGui
 XPathExtractor=org.apache.jmeter.extractor.XPathExtractor
 XPathExtractorGui=org.apache.jmeter.extractor.gui.XPathExtractorGui
 XPath2Extractor=org.apache.jmeter.extractor.XPath2Extractor
@@ -399,7 +410,7 @@ sampleEvent=org.apache.jmeter.samplers.SampleEvent
 #
 # Converters to register.  Must start line with '_'
 # If the converter is a collection of subitems, set equal to "collection"
-# If the converter needs to know the class mappings but is not a collection of 
+# If the converter needs to know the class mappings but is not a collection of
 #      subitems, set it equal to "mapping"
 _org.apache.jmeter.protocol.http.sampler.HTTPSamplerBaseConverter=collection
 _org.apache.jmeter.protocol.http.util.HTTPResultConverter=collection
