--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ plugins {
     id 'ivy-publish'
 
     id 'signing'
+    id "org.sonarqube" version '3.3'
 }
 
 repositories {
@@ -210,4 +211,12 @@ tasks.withType(GenerateModuleMetadata) {
 signing {
     required { gradle.taskGraph.hasTask('publishMavenPublicationToMavenRepository') }
     sign publishing.publications.maven
+}
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "smicyk_groovy-jmeter"
+    property "sonar.organization", "smicyk"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
 }
