[feature] - add J and G parameters and enable expression in different test elements
- the command line parameters J and G added, will work the same as for jmeter command line
- the jmeter expression can be used in numerical fields for several keywords
- update container versions for grafana, influxdb and telegraf
- update examples to show usage J and G command line parameters

--- a/examples/distributed/docker-compose.yml
+++ b/examples/distributed/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     volumes:
       - .:/home/groovy
       - grapes-cache:/home/groovy/.groovy/grapes
-    command: ["groovy", "script.groovy", "-c", "-r", "worker1-server:1099", "-r", "worker2-server:1099", "-r", "worker3-server:1099"]
+    command: ["groovy", "script.groovy", "-c", "-r", "worker1-server:1099", "-r", "worker2-server:1099", "-r", "worker3-server:1099", "-Gvar_users=1000", "-Gvar_rampUp=300"]
     depends_on:
       - worker1
       - worker2
