--- a/examples/application/docker-compose.yml
+++ b/examples/application/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     command: ["groovy", "script.groovy"]
 
   grafana:
-    image: grafana/grafana:latest
+    image: grafana/grafana:8.5.5
     container_name: grafana-app
     ports:
       - 3000:3000
@@ -42,7 +42,7 @@ services:
       GF_SECURITY_ADMIN_PASSWORD: admin
 
   influxdb:
-    image: influxdb:1.5.4
+    image: influxdb:1.8.10
     container_name: influxdb-app
     ports:
       - 8083:8083
@@ -56,7 +56,7 @@ services:
       INFLUXDB_ADMIN_PASSWORD: "jmeter"
 
   telegraf:
-    image: telegraf:1.8.3
+    image: telegraf:1.22.4
     container_name: telegraf-app
     links:
       - influxdb:influxdb-app
