--- a/examples/database/docker-compose.yml
+++ b/examples/database/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     command: ["groovy", "script.groovy"]
 
   grafana:
-    image: grafana/grafana:latest
+    image: grafana/grafana:8.5.5
     container_name: grafana-db
     ports:
       - 3000:3000
@@ -40,7 +40,7 @@ services:
       GF_SECURITY_ADMIN_PASSWORD: admin
 
   influxdb:
-    image: influxdb:1.5.4
+    image: influxdb:1.8.10
     container_name: influxdb-db
     ports:
       - 8083:8083
@@ -54,7 +54,7 @@ services:
       INFLUXDB_ADMIN_PASSWORD: "jmeter"
 
   telegraf:
-    image: telegraf:1.8.3
+    image: telegraf:1.22.4
     container_name: telegraf-db
     links:
       - influxdb:influxdb-db
