--- a/examples/monitoring/docker-compose.yml
+++ b/examples/monitoring/docker-compose.yml
@@ -10,7 +10,7 @@ networks:
 
 services:
   grafana:
-    image: grafana/grafana:latest
+    image: grafana/grafana:8.5.5
     container_name: grafana-books
     ports:
       - 3000:3000
@@ -25,7 +25,7 @@ services:
       GF_SECURITY_ADMIN_PASSWORD: admin
 
   influxdb:
-    image: influxdb:1.8.0
+    image: influxdb:1.8.10
     container_name: influxdb-books
     ports:
       - 8083:8083
@@ -39,7 +39,7 @@ services:
       INFLUXDB_ADMIN_PASSWORD: "jmeter"
 
   telegraf:
-    image: telegraf:1.14.4
+    image: telegraf:1.22.4
     container_name: telegraf-books
     links:
       - influxdb:influxdb-books
