[feature] - add new constrains and new behaviour for default value are reuiqred
- new constraints notNull and notEmpty
- if required and default set the validator pass

--- a/build.gradle
+++ b/build.gradle
@@ -204,7 +204,7 @@ publishing {
     }
 }
 
-// disable gradle module metadata to amke Ivy custom publication working
+// disable gradle module metadata to make Ivy custom publication working
 tasks.withType(GenerateModuleMetadata) {
     enabled = false
 }
