--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ plugins {
     id 'idea'
     id 'eclipse'
     id 'codenarc'
-    id 'pl.allegro.tech.build.axion-release' version '1.13.2'
+    id 'pl.allegro.tech.build.axion-release' version '1.16.1'
 
     id 'maven-publish'
     id 'ivy-publish'
@@ -35,8 +35,10 @@ scmVersion {
     tag {
         prefix = 'v'
         versionSeparator = ''
-        initialVersion = { config, position -> '0.8.0' }
+        initialVersion { config, position -> '0.8.0' }
     }
+    // produce SNAPSHOT version when there are any changes in the code
+    ignoreUncommittedChanges = false
 
     hooks {
         pre 'commit', { version, position -> "Release $version"}
@@ -52,15 +54,15 @@ java {
 }
 
 dependencies {
-    implementation ('org.codehaus.groovy:groovy-all:3.0.17')
+    implementation ('org.codehaus.groovy:groovy-all:3.0.20')
 
-    implementation ('org.apache.jmeter:ApacheJMeter_core:5.6.2')
-    implementation ('org.apache.jmeter:ApacheJMeter_java:5.6.2')
-    implementation ('org.apache.jmeter:ApacheJMeter_components:5.6.2')
-    implementation ('org.apache.jmeter:ApacheJMeter_http:5.6.2')
-    implementation ('org.apache.jmeter:ApacheJMeter_functions:5.6.2')
-    implementation ('org.apache.jmeter:ApacheJMeter_config:5.6.2')
-    implementation ('org.apache.jmeter:ApacheJMeter_jdbc:5.6.2')
+    implementation ('org.apache.jmeter:ApacheJMeter_core:5.6.3')
+    implementation ('org.apache.jmeter:ApacheJMeter_java:5.6.3')
+    implementation ('org.apache.jmeter:ApacheJMeter_components:5.6.3')
+    implementation ('org.apache.jmeter:ApacheJMeter_http:5.6.3')
+    implementation ('org.apache.jmeter:ApacheJMeter_functions:5.6.3')
+    implementation ('org.apache.jmeter:ApacheJMeter_config:5.6.3')
+    implementation ('org.apache.jmeter:ApacheJMeter_jdbc:5.6.3')
 
     implementation ('info.picocli:picocli:4.6.3')
     implementation ('info.picocli:picocli-groovy:4.6.3')
@@ -86,7 +88,7 @@ configurations {
 }
 
 codenarc {
-    toolVersion = '2.1.0'
+    toolVersion = '3.4.0'
     configFile = file("${rootProject.projectDir}/config/codenarc/rules.groovy")
     reportFormat = 'html'
     ignoreFailures = true
